# monad-par

./: .gitignore  .gitmodules  .project-settings.yml  DEVLOG.md  Makefile  ParCont.hs  README.md  TODO.txt  cabal.project  clone_submodules.sh  install_all.sh  mandel.hs  mega_install_all.sh  monad-par.cabal  perflog.txt  queens.hs
Data/: BitList.hs
Experimental/: STFirewall2.hs  VecPar.hs
RPC/: RPC.cabal
RPC/RPC/: Call.hs  Closure.hs  Encoding.hs  Reg.hs
Remote2/: Call.hs  Closure.hs  Encoding.hs  Reg.hs
abstract-par/: LICENSE  abstract-par.cabal
abstract-par-accelerate/: abstract-par-accelerate.cabal
abstract-par-accelerate/Control/Monad/Par/: Accelerate.hs
abstract-par-offchip/: abstract-par-offchip.cabal
abstract-par-offchip/Control/Monad/Par/: OffChip.hs
abstract-par/Control/Monad/Par/: Class.hs  Unsafe.hs
cbits/: pin.c
examples/: .gitignore  Makefile  README.md  benchlist.txt  benchlist_laptop.txt  benchlist_server.txt  benchmark.hs  benchmark.sh  benchmark_and_log.sh  blackscholes.hs  cholesky.hs  clusterbench.hs  coins.hs  common.mk  file_away.hs  filterbank.hs  generate_cabal.sh  get_cholesky_data.sh  hive_run_basic_haskell.sh  kmeans-c.c  mandel.hs  mergesort.hs  nbody.hs  ntimes  ntimes_binsearch.sh  ntimes_minmedmax  parfib.hs  parfib_monad.hs  parfib_pseq.hs  pedigreeTest.hs  pleasantly_par.hs  plot_scaling.hs  primes.hs  queens.hs  radix_acc.hs  randomGen.hs  run_benchmark  run_benchmark.cabal  run_benchmark.hs  run_tests.sh  (+4 more)
examples/Microbench/: AccSMP_Overhead.hs  embarrassingly_par.hs  parMapReduceRange.hs
examples/cholesky/: get_cholesky_data.sh
examples/distributed/: DistDefaultMain.hs  KMeansCommon.hs  Makefile  builddist.sh  config  kmeans_dist.hs  kmeans_gendata.hs  machine_list.txt  mandel_dist.hs  odin-results.tar.bz2  parfib_dist.hs  pleasantly_par_dist.hs  run_on_cluster.sh  run_single.sh  run_two_here_two_there.sh  run_two_local.sh  rundist.sh  rundist_logged.sh  sumeuler_ported.hs  test.sh  testdist.sh
examples/distributed/worker/: config
examples/kmeans/: KMeansCommon.hs  kmeans-clusters  kmeans.hs
examples/mandel/: mandel.cabal
examples/matmult/: Makefile  MatMult.hs
examples/minimax/: Board.hs  Game.hs  Main.hs  Makefile  minimax  minimax.stdout
examples/parfib-dist/: Makefile  monad-par-examples.cabal  parfib-dist.cabal  parfib_dist.hs  t_run_parfib.sh
examples/partree/: Makefile  Tree.hs  partree.hs
examples/quicksort/: parquicksort_monad.hs  parquicksort_pseq.hs  parquicksort_vec_monad.hs
examples/sorting/: Makefile  bench_mergesorts.sh  buildCudaParMerge.sh  cilkWrap.hs  cilksort.c  competitors.hs  cudaParMerge.hs  merge_static_partition_EXAMPLE.hs  mergesort-acc.hs  mergesort.hs
examples/src/: benchlist.txt  blackscholes.hs  mandel.hs  nbody.hs  ntimes  parfib_monad.hs  pleasantly_par.hs  primes.hs
examples/src/Microbench/: README.md
examples/src/blackscholes/: blackscholes.hs
examples/src/cholesky/: cholesky.hs
examples/src/coins/: coins.hs
examples/src/distributed/: builddist.sh  kmeans_dist.hs  kmeans_gendata.hs  mandel_dist.hs  pleasantly_par_dist.hs  run_single.sh  sumeuler_ported.hs  t_run_parfib.sh
examples/src/kmeans/: KMeansCommon.hs  get_kmeans_data.sh  kmeans.hs  kmeans_gendata.hs
examples/src/mandel/: mandel.hs
examples/src/matmult/: matmult.hs
examples/src/minimax/: Game.hs  Prog.hs  Tree.hs
examples/src/nbody/: nbody.hs
examples/src/parfib/: parfib-monad.hs  parfib_monad.hs
examples/src/partree/: Tree.hs  partree.hs
examples/src/primes/: primes.hs
examples/src/queens/: queens.hs
examples/src/quicksort/: parquicksort_vec_monad.hs
examples/src/schedulers/: LVishPlusCancelT.hs  LVishPlusRNG.hs  LVishPlusStateT.hs  README.md  TracePlusParST.hs
examples/src/simple/: pleasantly_par.hs
examples/src/sorting/: Makefile  accelerate_experiment.hs  cilkWrap.hs  competitors.hs  mergesort.hs  radix_acc.hs
examples/src/sorting/unfinished/: mergesort-acc.hs
examples/src/stream/: DEVLOG.txt  disjoint_working_sets_pipeline.hs
examples/src/sumeuler/: sumeuler.hs
examples/stream/: DEVLOG.txt  Makefile  disjoint_working_sets_pipeline.hs  fft_pipeline.hs  simple1_measureSrc.hs
examples/sumeuler/: Makefile  SumEuler.hs
include/: pin.h
meta-par/: meta-par.cabal
meta-par-accelerate/: meta-par-accelerate.cabal
meta-par-accelerate/Control/Monad/Par/Meta/: AccSMP.hs
meta-par-accelerate/Control/Monad/Par/Meta/Resources/: Accelerate.hs
meta-par-accelerate/Data/Array/Accelerate/IO/: Vector.hs
meta-par-cuda/: meta-par-cuda.cabal
meta-par-cuda/Control/Monad/Par/Meta/Resources/: CUDAMergeSort.hs
meta-par-dist-tcp/: meta-par-dist-tcp.cabal
meta-par-dist-tcp/Control/Monad/Par/Meta/: Dist.hs
meta-par-dist-tcp/Control/Monad/Par/Meta/Resources/: Remote.hs
meta-par/Control/Monad/Par/: Meta.hs
meta-par/Control/Monad/Par/Meta/: Dist.hs  DistSMP.hs  NUMAOnly.hs  SMP.hs  SMPMergeSort.hs  Serial.hs  SharedMemoryExample.hs  SharedMemoryOnly.hs
meta-par/Control/Monad/Par/Meta/HotVar/: IORef.hs
meta-par/Control/Monad/Par/Meta/Resources/: Accelerate.hs  Backoff.hs  Debugging.hs  NUMA.hs  SMP.hs  SharedMemory.hs  SingleThreaded.hs
monad-par/: README.md  monad-par.cabal
monad-par-data/: README.md
monad-par-extras/: monad-par-extras.cabal
monad-par-extras/Control/Monad/Par/: AList.hs  Combinator.hs  Pedigree.hs  RNG.hs  State.hs
monad-par-transformers/: monad-par-transformers.cabal
monad-par-transformers/Control/Monad/Par/Engines/: Internal.hs
monad-par/Control/Monad/: Par.hs  Par_Strawman.hs
monad-par/Control/Monad/Par/: AList.hs  Class.hs  Combinator.hs  IList.hs  IO.hs  Logging.hs  Pedigree.hs  RNG.hs  Stream.hs
monad-par/Control/Monad/Par/Scheds/: ContFree.hs  Direct.hs  DirectInternal.hs  IOThreads.hs  SerialElision.hs  Sparks.hs  Trace.hs  TraceInternal.hs
monad-par/bench/: Bench.hs  Makefile  bench-monad-par.cabal
monad-par/tests/: AListTest.hs  AllTests.hs  AsyncTest.hs  Makefile  ParTests.hs  ParTests1.hs  ParTests2.hs  ParTests_shared.hs  TestHelpers.hs  Test_ContReaderT.hs  hs_cassandra_microbench.hs  hs_cassandra_microbench2.hs
(+120 files in other folders)
