Name:                RPC
Version:             0.3
Synopsis:            Mechanism for (de)serializing closures for remote execution.

-- Version history:
-- 
--  0.3      : Initial Release

Description:         
Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2012
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                   RPC.Call
                 , RPC.Closure                 
                 , RPC.Reg
                 , RPC.Encoding

  Other-modules: 


  Build-depends: base >= 4 && < 5
               , deepseq >= 1.2
               , mtl >= 2.0.1.0
               , template-haskell
               , cereal >= 0.3
               , binary
               , syb
               , bytestring >= 0.9
               , containers
               , meta-par


  ghc-options:   -Wall