Name:                abstract-par-accelerate
Version:             0.3
Synopsis:            Provides the class `ParAccelerate`, nothing more.

-- Version history:
-- 
-- 0.3: Initial release.

Description:        

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Adam Foltzer 2011-2012
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Adam Foltzer 2011-2012
Stability:           Experimental
Category:            Parallelism
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- Provides the class ParAccelerate:
                 Control.Monad.Par.Accelerate

  Build-depends:  
                  base >= 4 && < 5
                , abstract-par >= 0.3
                , accelerate >= 0.10 
                , vector >= 0.9
                , array 

  ghc-options:    -Wall
