Name:                abstract-par
Version:             0.3.3
Synopsis:            Type classes generalizing the functionality of the 'monad-par' library.


-- Version history:

--  0.3      : Factored out of monad-par package.
--  0.3.1    : Relax deepseq restriction
--  0.3.3    : Minor: doc and formatting changes only.

Description:
  The 'Par' monad offers a parallel programming API based on dataflow
  programming.  To use the `Par` monad, install the @monad-par@
  package, which includes this package as a dependency.
  .
  This package is an abstract interface only. It provides a number of
  type clasess, but not an implementation.  The type classes separate
  different levels of @Par@ functionality.  See the
  "Control.Monad.Par.Class" module for more details.

Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2012
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

extra-source-files:


Library
  Exposed-modules: 
           -- A class generalizing different levels of monad-par functionality:
           Control.Monad.Par.Class

           -- A class providing unsafe functionality:
           , Control.Monad.Par.Unsafe

  Build-depends: base >= 4 && < 5
               , deepseq >= 1.1
