Name:                meta-par-accelerate
Version:             0.3
Synopsis:            Support for integrated Accelerate computations within Meta-par.

-- Version history:
-- 
-- 0.3: Initial release.

Description:        
  This package provides a 'Control.Monad.Par.Meta.Resource' for building meta-par
  (<hackage.haskell.org/package/meta-par>) schedulers with GPU support.  
  
  This package also provides a complete scheduler for CPU plus GPU
  execution.  It supports the 'Control.Monad.Par.Par' monad
  programming model with additional support for GPUs.


Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Adam Foltzer 2011-2012
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Adam Foltzer 2011-2012
Stability:           Experimental
Category:            Parallelism
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- This is a complete scheduler for shared-memory
                 -- (parallel) and GPU computation:
                 Control.Monad.Par.Meta.AccSMP,

                 -- This is a resource used to build schedulers:
                 Control.Monad.Par.Meta.Resources.Accelerate

  Build-depends:  
                  base >= 4 && < 5
                , abstract-par
                , meta-par
                , abstract-deque
                , accelerate >= 0.12
                , accelerate-io
                , abstract-par-accelerate 
                , abstract-par-offchip
                , QuickCheck 
                , transformers
                , vector
                , array

  ghc-options:    -Wall 

  if flag(cuda)
     ghc-options: -DACCELERATE_CUDA_BACKEND
     Build-depends: accelerate-cuda

  if flag(debug)
     ghc-options: -DDEBUG

flag cuda
  default:           False

flag debug
  default:           False
