Name:                meta-par-accelerate
Version:             0.3.4
Synopsis:            Support for integrated Accelerate computations within Meta-par.

-- Version history:
-- 
-- 0.3: Initial release.
-- 0.3.1: tweak dependencies
-- 0.3.2: tweak resulting from abstract-par-accelerate-0.3.2
-- 0.3.3: Remove erroneous ConstraintKinds usage.
-- 0.3.4: Egad, ditto.

Description:        
  This package provides a 'Control.Monad.Par.Meta.Resource' for building meta-par
  (<hackage.haskell.org/package/meta-par>) schedulers with GPU support.  
  
  This package also provides a complete scheduler for CPU plus GPU
  execution.  It supports the 'Control.Monad.Par.Par' monad
  programming model with additional support for GPUs.


Homepage:            https://github.com/simonmar/monad-par
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton, Adam Foltzer 2011-2012
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Adam Foltzer 2011-2012
Stability:           Experimental
Category:            Parallelism
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules: 
                 -- This is a complete scheduler for shared-memory
                 -- (parallel) and GPU computation:
                 Control.Monad.Par.Meta.AccSMP,

                 -- This is a resource used to build schedulers:
                 Control.Monad.Par.Meta.Resources.Accelerate

  Build-depends:  
                  base >= 4 && < 5
                , abstract-par
                , meta-par
                , abstract-deque
                , abstract-par-accelerate 
--                , abstract-par-offchip
                , QuickCheck 
                , transformers
                , vector
                , array

  ghc-options:    -Wall 

  if flag(newAccelerate) && flag(cuda)
     cpp-options: -DACCELERATE_CUDA_BACKEND
     Build-depends: accelerate-cuda

  if flag(debug)
     cpp-options: -DDEBUG

  if flag(newAccelerate) 
    Build-depends: accelerate >= 0.12
                 , accelerate-io >= 0.12
  else
    Build-depends: accelerate >= 0.10 && < 0.12



flag newAccelerate
  default:        False

-- Sets the default backend to CUDA:
flag cuda
  default:           False

flag debug
  default:           False

